# NexusArbiter

./: .gitignore  ALL_PY.txt  LICENSE  README.md  all_classes_extract.py  api_param_generator.py  calculator.py  class_generator.py  class_reader.py  cli.py  main.py  merge_py.py  merged_all.txt  merged_all_library.txt  merged_output.txt  openaicost.py  pyproject.toml  requirements.txt  setup_wizard.py
app/: app.py  gemini_hello.py  module_A.py
configs/: calculator_runs.json  generate_action.json  generate_tetris_plan.json  profile_action_with_security_runs.json  project_manifest_tetris_run.json  self_update_generate_profile_action.json  test.json  tetris_board.json  tetris_onat.json  tetris_runs.json
context_files friday/general_rules/: attribution_rules.json  manifest_example.json  (+7 more)
core/: app.py  calculator.py  logger.py
expense_tracker/: app_logging.py  main.py
expense_tracker copy/: story_validation.json
expense_tracker_MILESTONE_CONGRATZ/: atomic_writer.py  config.py  controller.py  models.py  repository.py  serializer.py  service.py  validator.py
helper/: merge_py.py
library_manager/: application.py  main.py
manifests/: test_todo_manifest.json
nexusarbiter.egg-info/: PKG-INFO
profiles/: code_generation.json  code_refactor.json  framework_action_generator.json  project_manifest_generator.json  security_scan.json
rules/: generic_rules.json  project_rules.json
test/: calculator.py  retry_demo_calculator.py  tetris_manifest.json
tests/: conftest.py  test_break_and_continue_actions.py  test_file_write_action.py  test_rerun_action.py
(+254 files in other folders)
